# casa-simple-notification-service

./: .editorconfig  Cargo.toml  README.md
src/: main.rs  networks.rs
src/data/: networks.json
